--- a/EMART-UI/src/app/Account/login/login.component.css
+++ b/EMART-UI/src/app/Account/login/login.component.css
@@ -72,10 +72,11 @@ label {
   background: rgb(245, 174, 108);
 } */
 
-/* @media screen and (max-width: 600px) {
-  .topnav .search-container {
+@media screen and (max-width: 600px) {
+  /* .topnav .search-container {
     float: none;
   } */
+}
   /* .topnav a, .topnav input[type=text], .topnav .search-container button {
     float: none;
     display: block;
