--- a/EMART-UI/src/app/Admin/add-category/add-category.component.css
+++ b/EMART-UI/src/app/Admin/add-category/add-category.component.css
@@ -18,3 +18,9 @@ input[type=password] {
   border: 1px solid rgb(119, 25, 25); 
   box-sizing: border-box; 
 } 
+label{
+  font-size: 20px;
+}
+button{
+  size: 40px;
+}
