--- a/EMART-UI/src/app/Buyer/purchase-history/purchase-history.component.html
+++ b/EMART-UI/src/app/Buyer/purchase-history/purchase-history.component.html
@@ -1,1 +1,26 @@
-<p>purchase-history works!</p>
+<!-- <p>purchase-history works!</p> -->
+
+<br><br><br><br><br>
+<div class="container">
+    <br/> 
+   <table class="table table-bordered">
+     <tr >
+       <th>ItemId</th>
+       <th>Number Of Items</th>
+       <th>Seller ID</th>
+       <th>Transaction Type</th>
+       <th>Ordered Date</th>
+       <th>Transaction ID</th>
+     </tr>
+     <tr *ngFor="let item of transobj" >
+       <td>{{item.itemId}}</td>
+       <td>{{item.numberOfItems}}</td>
+       <td>{{item.sellerId}}</td>
+       <td>{{item.transactionType}}</td>
+       <td>{{item.dateTime}}</td>   
+       <td>{{item.transactionId}}</td>
+     </tr>
+   </table>
+</div>  
+
+
