--- a/EMART-UI/src/app/Seller/seller/seller.component.html
+++ b/EMART-UI/src/app/Seller/seller/seller.component.html
@@ -3,7 +3,7 @@
         <a class="active"  href="/home"><i class="fa fa-fw fa-home"></i>Home</a>
         <a [routerLink]="['add-items']"  ><span class="glyphicon glyphicon-folder-open"></span> Add Items</a>
         <a [routerLink]="['view-items']" ><span class="glyphicon glyphicon-search"> </span> View Items </a>
-        <a href=#><span class="glyphicon glyphicon-file"> </span>  View Report</a>
+        <!-- <a href=#><span class="glyphicon glyphicon-file"> </span>  View Report</a> -->
         <a [routerLink]="['view-seller-profile']" routerLinkActive="router-link-active" ><span class="glyphicon glyphicon-file"> </span>  View Profile</a>
         <a (click)="Logout()">Logout</a> 
         
