--- a/EMART-UI/src/app/Admin/add-category/add-category.component.html
+++ b/EMART-UI/src/app/Admin/add-category/add-category.component.html
@@ -37,8 +37,8 @@
 
   <div class="text">
 
-      <button  type="submit" >Add</button>
-      <button  type="reset" (click)="onReset()" >Reset</button>
+      <button  type="submit" ><h4>Add</h4></button>
+      <button  type="reset" (click)="onReset()" ><h4>Reset</h4></button>
       
   </div>
 
