--- a/EMART-UI/src/app/Buyer/buy-product/buy-product.component.css
+++ b/EMART-UI/src/app/Buyer/buy-product/buy-product.component.css
@@ -1,23 +1,23 @@
-
+/* 
 .view {
     /* width: 200px; */
-    margin-left: 500px;
+    /* margin-left: 500px;
   
-   background-color: black;
+   background-color: black; */
    /* background: transparent(0.5); */
-   width: 500px;
-   position:absolute; 
-   margin-top:290px;
-   margin-left: 500px;
-  transform:translate(-50%,-50%);
+   /* width: 500px; */
+   /* position:absolute;  */
+   /* margin-top:290px;
+   margin-left: 500px; */
+  /* transform:translate(-50%,-50%); */
   /* width:250px; */
-  height:660px;
+  /* height:660px;
   padding:80px 90px;
   box-sizing:border-box;
   border-radius: 30px;
   background:rgba(0,0,0,0.5);
- /* position: fixed; */
- }
+ /* position: fixed; 
+ } */
     
  /* .loginbox {
    position:absolute; 
@@ -57,4 +57,19 @@
   margin-left: 420px;
  }
   */
- 
+  .form-group{
+     width: 260px;
+  }
+  label{
+   color:palegoldenrod;
+   font-size: 14px;
+  }
+  button{
+     color: paleturquoise;
+  }
+  .jumbotron{
+   width: 350px;
+   height: 400px;
+   color: violet;
+}
+  
