--- a/EMART-UI/src/app/Buyer/buy-product/buy-product.component.html
+++ b/EMART-UI/src/app/Buyer/buy-product/buy-product.component.html
@@ -1,34 +1,7 @@
-<p>buy-product </p>
-<!-- <div  class="jumbotron  " > -->
-    <!-- <h3>Buy Product</h3>
-  <form [formGroup]="transForm">
-      <div class="form-group">
-           
-  
-           
-          <input type="text" formControlName="numberofitems" class="form-control" required/>
-          </div> 
-         
-     
-      
-      <div class="form-group">
-       
-        Debit  <input type="radio" formControlName="transactiontype"  value="debit"  />&nbsp;
-        Credit  <input type="radio" formControlName="transactiontype"  value="credit" />
-  
-      </div>
-  <div class="text-center">
-  
-      <button  type="submit" id=b2  (click)="onSubmit()">Buy</button>
-      
-      
-  </div>
-  
-  </form> -->
-  <!-- </div> -->
-  <div class="card card-signin my-5 " style="float:right">
+
+  <!-- <div class="card card-signin my-5 " style="float:right"> -->
     <h5 class="card-header text-center" >Payment </h5>
-                        <div class="card-body">
+                        <!-- <div class="card-body"> -->
                             <form [formGroup]="buyerform" (ngSubmit)="onSubmit()">    
                                   <div class="form-group">
                                     <label >Number Of Items</label>
@@ -71,9 +44,9 @@
                                 <hr class="my-4 bg-success"/>
                                 <div class="form-group">
                                     <div class="text-center">
-                                        <button type="submit" class="btn  mr-1">Purchase</button>
+                                        <button type="submit" class="btn  mr-1"><h2>Purchase</h2></button>
                                     </div>
                                 </div>
                             </form>
-                        </div>
-                    </div>
+                        <!-- </div>
+                    </div> -->
