--- a/EMART-UI/src/app/Buyer/buyer/buyer.component.css
+++ b/EMART-UI/src/app/Buyer/buyer/buyer.component.css
@@ -19,7 +19,19 @@
 }
 * {box-sizing: border-box;}
 
-body {
+/* body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  /* background-image: url("src\assets\images\shoeshop.jpg"); */
+ /* background-image: url("src\assets\images\shoe5.jpg"); */
+  /* height: 650px; */
+  /* width: 1035px;  */
+  /* background-repeat: no-repeat; */
+  /* background-size: cover;
+   background-attachment: fixed; 
+background-position: center; */ 
+
+#j1{
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   /* background-image: url("src\assets\images\shoeshop.jpg"); */
@@ -27,8 +39,8 @@ body {
   height: 650px;
   /* width: 1035px;  */
   /* background-repeat: no-repeat; */
-  background-size: cover;
-   background-attachment: fixed; 
+  /* background-size: cover; */
+   /* background-attachment: fixed;  */
 background-position: center;
 }
 
