--- a/EMART-UI/src/app/Buyer/buyer/buyer.component.html
+++ b/EMART-UI/src/app/Buyer/buyer/buyer.component.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -7,24 +7,43 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </head>
-<body>
-
+<body> -->
+    <div id="j1">
+    <div class="row">
+<div class="col-lg-12">
     <div class="topnav">
         
         <a (click)="Logout()"><span class="glyphicon glyphicon-log-out" ></span>Logout</a> 
         <!-- <a [routerLink]="['/home/login']" ><span class="glyphicon glyphicon-log-out" > </span> LogOut </a> -->
         <a class="active" [routerLink]="['/home']" routerLinkActive="router-link-active"  id="v1"><i class="fa fa-fw fa-home"></i>Home</a>
         <a [routerLink]="['view-buyer-profile']" routerLinkActive="router-link-active" ><i class="fa fa-fw fa-user"></i>ViewProfile</a>
-        <a href="#"><i class="fa fa-fw fa-phone"></i>Contact</a> 
+       
         <a [routerLink]="['search']" ><span class="glyphicon glyphicon-expand" > </span> Search </a><br><br>
-        
-        <div class="sidenav">
-            <!-- <h1>Buyer</h1><br><br> -->
-          <a [routerLink]="['buy-product']"  id="r1"><span class="glyphicon glyphicon-shopping-cart"></span> BuyProduct</a><br><br><br>
-          <a [routerLink]="['purchase-history']"   id="r1"><span class="glyphicon glyphicon-time"> </span>  PurchaseHistory </a><br><br><br>
-          <a [routerLink]="['view-cart']"   id="r1"><span class="glyphicon glyphicon-eye-open"> </span>  ViewCart</a><br>
+    </div>
+    </div>
+    
+</div>
+    <div class="row">
+        <div class="col-lg-3">
+            <div class="sidenav">
+                <!-- <h1>Buyer</h1><br><br> -->
+                
+              <a [routerLink]="['buy-product']"  id="r1"><span class="glyphicon glyphicon-shopping-cart"></span> BuyProduct</a><br><br><br>
+              <a [routerLink]="['purchase-history']"   id="r1"><span class="glyphicon glyphicon-time"> </span>  PurchaseHistory </a><br><br><br>
+              <a [routerLink]="['view-cart']"   id="r1"><span class="glyphicon glyphicon-eye-open"> </span>  ViewCart</a><br><br>
+              <!-- <a href="#"><i class="fa fa-fw fa-phone" id="r1"></i>Contact</a> <br><br> -->
+            </div>
         </div>
-      </div>
+        
+
+        <div class="col-lg-6">
+            
+
+
+            <router-outlet></router-outlet>  
+        </div>
+        </div>
+    </div>
         <!-- <a [routerLink]="['/home/login']" ><span class="glyphicon glyphicon-log-out" > </span> Logout </a><br><br> -->
        
         
@@ -107,6 +126,3 @@
       
   
       </div> -->
-
-
-<router-outlet></router-outlet>  
