--- a/EMART-UI/src/app/Seller/add-items/add-items.component.css
+++ b/EMART-UI/src/app/Seller/add-items/add-items.component.css
@@ -128,7 +128,7 @@ background-position: center;
    /* width: 200px; */
    margin-left: 500px;
  
-  background-color: black;
+  background-color: rgb(223, 205, 205);
   /* background: transparent(0.5); */
   width: 500px;
   position:absolute; 
@@ -142,6 +142,10 @@ background-position: center;
  border-radius: 30px;
  background:rgba(0,0,0,0.5);
 /* position: fixed; */
+}
+label{
+  color:rgb(231, 116, 8);
+  font-size: 14PX;
 }
    
 /* .loginbox {
