--- a/EMART-UI/src/app/Admin/view-categories/view-categories.component.html
+++ b/EMART-UI/src/app/Admin/view-categories/view-categories.component.html
@@ -18,7 +18,7 @@
                       <td>{{item.categoryName}}</td>
                       <td>{{item.briefDetails}}</td>
                       <td><button class="btn btn-primary btn-lg  mr-1" (click)="GetCatById(item.categoryId)" data-toggle="modal" data-target="#myModal">Edit</button></td>
-                      <td><button class="btn btn-danger  btn-lg  mr-1" (click)="Delete(item.categoryId)">Delete</button></td>
+                      <!-- <td><button class="btn btn-danger  btn-lg  mr-1" (click)="Delete(item.categoryId)">Delete</button></td> -->
                  </tr>
              </table>
          </div>
@@ -41,7 +41,7 @@
           <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal">&times;</button>
-              <h4 class="modal-title">Modal Header</h4>
+              <h4 class="modal-title">Edit Here</h4>
             </div>
             <div class="modal-body">
               <form [formGroup]="viewcatForm">
