--- a/EMART-UI/src/app/Buyer/buyer/buyer.component.css
+++ b/EMART-UI/src/app/Buyer/buyer/buyer.component.css
@@ -46,7 +46,7 @@ background-position: center;
 
 .topnav {
   overflow: hidden;
-  background-color:lightgoldenrodyellow;
+  background-color:rgb(235, 235, 187);
 }
 #v1{
   float: left;
