--- a/EMART-UI/src/app/Seller/view-seller-profile/view-seller-profile.component.html
+++ b/EMART-UI/src/app/Seller/view-seller-profile/view-seller-profile.component.html
@@ -1,5 +1,5 @@
 
-
+<div id="s1">
 <div class='bold-line'></div>
       <div class='window'>
         <div class='overlay'></div>
@@ -47,3 +47,4 @@
           </form>
         </div>
       </div>
+    </div>
