--- a/EMART-UI/src/app/Seller/view-items/view-items.component.html
+++ b/EMART-UI/src/app/Seller/view-items/view-items.component.html
@@ -1,43 +1,38 @@
-<body>
+<br>
+<br>
 <form [formGroup]="itemForm" >
-  <div class="container py-5">  
+  <div class="container py-5" id="form">  
     <h3 class="text-center text-uppercase">List of Items</h3>  
-    <table class="table table-bordered table-striped">  
+    <table class="table table-info table-striped">  
         <thead>  
             <tr class="text-center text-uppercase">  
                 
-                <!-- <th>SellerId</th> 
-                <th>CategoryId</th> 
                 
-                <th>SubcategoryId</th> -->
-                <th>ItemID</th>  
                 <th>ItemName</th>  
+                <th>Image</th>  
                 <th>Description</th> 
                 <th>Price</th>   
                 <th>StockNumber</th>  
-                <!-- <th>Image</th> -->
+              
                   
-                <th>Remarks</th> 
+                
                
             </tr>  
         </thead>  
         <tbody>  
           <tr *ngFor="let item of itemlist"> 
-            <!-- <td>{{item.sellerId}}</td>  
-            <td>{{item.categoryId}}</td> 
-            <td>{{item.subcategoryId}}</td>  -->
-            <td>{{item.itemId}}</td>  
+            
             <td>{{item.itemName}}</td> 
-
+            <td><img class="card-img " src="assets/images/{{item.image}}" alt="Card image cap" width="1%" > </td>
             <td>{{item.description}}</td>
             <td>{{item.price}}</td>  
               
             <td>{{item.stockNumber}}</td> 
         
          
-            <!-- <td>{{item.image}}</td> -->
+            
               
-            <td>{{item.remarks}}</td>  
+           
             <td> <button class='btn btn-danger' (click)="DeleteItem(item.itemId)">Delete</button> </td>
             <!-- <td><button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal"(click)="UpdateItem()">Edit</button></td>
              -->
@@ -63,53 +58,19 @@
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Modal Header</h4>
+                <h4 class="modal-title"></h4>
               </div>
               <div class="modal-body">
                 <form [formGroup]="itemForm">
-                   <div class="form-group ">
-                        <label>SubcategoryName</label><br>
-                        <input type="text" formControlName="SubcategoryId" class="form-control" readonly />
-                    </div>
-                    <div class="form-group ">
-                        <label>CategoryName</label><br>
-                        <input type="text" formControlName="CategoryId" class="form-control" readonly />
-                    </div>
-             <div class="form-group ">
-                <label>SellerId</label><br>
-                <input type="text" formControlName="SellerId" class="form-control" readonly />
-               </div>
-             <div class="form-group ">
-                <label>ItemId</label><br>
-                <input type="text" formControlName="ItemId" class="form-control" readonly /> 
-             </div> 
+                   
                 <div class="form-group ">
                     <label>ItemName</label><br>
                     <input type="text" formControlName="ItemName" class="form-control" required />
                     
                 </div>
+              
 
-
-              <!-- <div class="form-group ">
-    <label>Image</label><br>
-    <input type="file" (change)="fileEvent($event)"/>
-    
-</div> -->
-
-<div class="text-center">
-
-  
-  
-
-  <div *ngFor="let item of itemlist">
-    <div>
-      <img src='assets/images/{{item.img}}' style="height:150px; width:150px;"><br>
-      Name:{{item.name}}
-    </div>
-  </div>
-
-</div>
-
+                
               
               <div class="form-group ">
                   <label>Description</label><br>
@@ -147,4 +108,3 @@
         
         </div>
     </div>
-  </body>
